2012-01-21  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/FileFormatToolbox/scinrrd_load.m (v0.2.0):

	- Add loading of .lsm files.

2012-01-19  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/FileFormatToolbox/dcm2metaimage.m (v0.1.1):
	* matlab/FileFormatToolbox/im2metaimage.m (v0.1.1):

	- Use new writemetaimagefile() function to write a single .mha
	function instead of splitting header and image into .mha and .raw
	files.

	* Add matlab/FileFormatToolbox/writemetaimagefile.m (v0.1.0):

	- WRITEMETAIMAGEFILE Write a MetaImage file (.mha) with both
	header and data.

	* matlab/FileFormatToolbox/scinrrd_save.m (v0.3.0):

	- Now nrrd volumes can be saved to MetaImage format as well as
	Matlab format. The reson to do this is that Seg3D at this point
	cannot read the spacing and offset values from an image saved in
	.mat format.

	* matlab/FileFormatToolbox/WriteMhaFile.m (v0.1.1):

	- Tidy up function. Remove unncessary input arguments. Images with
	input type 'char' are not considered valid anymore.

	* matlab/FileFormatToolbox/WriteRawFile.m (v0.2.0):

	- Remove most of the code, that was redundant. What was happening
	is that a header was being written, and then overwritten by the
	raw data. Now only the raw data is written. Also, unnecessary
	input arguments have been removed.

2012-01-13  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* release 0.6.1

	- Added CUDA support with Matlab.

	* matlab/FiltersToolbox/Deconvolve.cpp:
	* matlab/FiltersToolbox/deconvolve.m:

	- Edit help header to note that the CUDA implementation is now
	available.

	* CMakeLists.txt:

	- Select gcc v4.4 automatically if we want to compile Clarity with
	its CUDA implementation. The CUDA implementation doesn't seem to
	make a big difference, though. This is a test on a volume with
	size RxCx19 and a PSF of size 9x9x7. Time in seconds.

	 R,C | no CUDA  |  CUDA   |
	---------------------------
	 128 |   14.55  |  15.38  |
	 256 |    9.13  |   9.85  |
	 512 |  103.44  |  93.79  |